[package]
name = "g_shell"
version = "0.1.0"
authors = ["garebare <garedaiki@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "0.20.0"
whoami = "1.1.1"
dirs = "3.0"
chan = "0.1.23"
termion = "1.5.6"
